Refactor: Cookie path를 "/"로 리팩토링